add review options logout

--- a/employemanage/src/app/admindashboard/adminpanel/adminpanel.component.html
+++ b/employemanage/src/app/admindashboard/adminpanel/adminpanel.component.html
@@ -1,4 +1,5 @@
-<div><button (click)="addNewEmployee()" class="btn btn-info">New</button></div>
+<div class="title"><button (click)="addNewEmployee()" class="btn btn-info">New</button></div>
+<div class="title"><button (click)="logout()" class="btn btn-danger">logout</button></div>
 
 <table class="table table-bordered">
     <thead>
