--- a/employemanage/src/app/employeedashboard/employepanel/employepanel.component.html
+++ b/employemanage/src/app/employeedashboard/employepanel/employepanel.component.html
@@ -1,6 +1,8 @@
+
 <div class="container mt-4">
     <h3>Assigned Reviews</h3>
-    
+    <div class="title"><button (click)="logout()" class="btn btn-danger">logout</button></div>
+
     <table class="table table-bordered table-striped">
       <thead>
         <tr>
